# amt-uefi-boot-app

./: .gitignore  BUILD_WINDOWS.md  Cargo.toml  Makefile  README.md  amt.c  amt.h  heci.c  heci.h  lme.c  lme.h  main.c  rust-toolchain.toml
.claude/: settings.local.json
memory/: MEMORY.md  feedback_wsl_build.md  project_amt_architecture.md  project_uefi_lessons.md  user_platform.md
src/: amt.rs  error.rs  font.rs  http.rs  main.rs  md5.rs  pci.rs  str_util.rs  ui.rs  wsman.rs  wsman_glue.rs
src/heci/: hbm.rs  linux.rs  mod.rs  regs.rs  transport.rs  windows.rs
src/lme/: apf.rs  mod.rs
